src/test/ui/issues/issue-16725.stderr
error[E0603]: function `bar` is private
  --> $DIR/issue-16725.rs:6:19
   |
LL |     unsafe { foo::bar(); }
   |                   ^^^ this function is private
   |
note: the function `bar` is defined here
  --> $DIR/auxiliary/issue-16725.rs:2:5
   |
LL |     fn bar();
   |     ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
